--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.taro_page {
+  @apply bg-gray-50 #{!important};
+}
